JumpScript/tests/baselines/reference/es6ImportNameSpaceImportWithExport.errors.txt
tests/cases/compiler/client.jump(1,1): error TS1191: An import declaration cannot have modifiers.
tests/cases/compiler/client.jump(3,1): error TS1191: An import declaration cannot have modifiers.


==== tests/cases/compiler/server.jump (0 errors) ====
    export var a = 10;
    
==== tests/cases/compiler/client.jump (2 errors) ====
    export import * as nameSpaceBinding from "server";
    ~~~~~~
!!! error TS1191: An import declaration cannot have modifiers.
    export var x = nameSpaceBinding.a;
    export import * as nameSpaceBinding2 from "server"; // Not referenced imports
    ~~~~~~
!!! error TS1191: An import declaration cannot have modifiers.
    